parser and calculation of rates

--- a/core-service/src/main/resources/application.properties
+++ b/core-service/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 spring.application.name=core-service
 server.port=8082
 
+# --- Database ---
 spring.datasource.url=jdbc:postgresql://147.45.43.253:5432/BoomBet
 spring.datasource.username=betting_app_user
 spring.datasource.password=1234
-
-# Настройки JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+
+# --- Kafka Producer (для отправки уведомлений из core-service в будущем) ---
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.add.type.headers=false
+
+# --- Kafka Consumer ---
+spring.kafka.bootstrap-servers=localhost:9092
