--- a/realtime-service/src/main/resources/application.properties
+++ b/realtime-service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=realtime-service
+
+server.port=8083
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=realtime-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.add.type.headers=false
