--- a/realtime-service/src/main/resources/application.properties
+++ b/realtime-service/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.add.type.headers=false
+
+api.the-odds-api.key=18bbb57a88e2ce5ad942bb51e001e699
+api.the-odds-api.base-url=https://api.the-odds-api.com/v4/sports
