--- a/core-service/Dockerfile
+++ b/core-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM eclipse-temurin:21-jdk
 WORKDIR /app
 COPY . .
-RUN ./mvnw dependency:go-offline
+RUN ./mvnw -Dhttps.protocols=TLSv1.2 dependency:go-offline
 CMD ["./mvnw", "spring-boot:run"]
