--- a/core-service/src/main/resources/application.properties
+++ b/core-service/src/main/resources/application.properties
@@ -5,13 +5,19 @@ server.port=8082
 spring.datasource.url=jdbc:postgresql://postgres:5432/BoomBet
 spring.datasource.username=betting_app_user
 spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# --- Kafka Producer (для отправки уведомлений из core-service в будущем) ---
+# --- Kafka Producer (??? ???????? ??????????? ?? core-service ? ???????) ---
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.add.type.headers=false
 
 # --- Kafka Consumer ---
 spring.kafka.bootstrap-servers=kafka:29092
+spring.kafka.consumer.group-id=core-service-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.use.type.headers=false
