--- a/core-service/src/test/resources/application.properties
+++ b/core-service/src/test/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=test-core-service
